--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".QuestionAcitvity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".QuestionAcitvity" />
         <activity android:name=".WorkAcitivity" />
         <activity android:name=".MoneyQuestion" />
+        <activity android:name=".AboutUs" />
         <activity android:name=".Main2Activity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".PrivacyPolicy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
